# webwarcybergame

./: .dockerignore  .env  .firebaserc  .gitignore  BACKEND.md  COVERAGE_REPORT.md  Dockerfile  INTEGRATION_FUNCTIONAL_TESTS.md  README-Phase2-Dev.md  README.md  TESTING.md  TEST_QUICK_START.md  UNIT_TESTING_SUMMARY.md  capture_browser_logs.js  capture_game.js  capture_playwright.py  create_screenshots.js  cyberwar.db  debug_clicks.js  default_theme.tres  deploy_bypass.sh  deploy_gcp.sh  deploy_gcp_v41.sh  deploy_v3_prod.sh  docker-compose.dev.yml  docker-compose.yml  e2e_test.js  export_presets.cfg  firebase.json  fix_diplomacy.py  fix_engine.py  fix_main.py  generate_map.py  generate_promo.py  generate_promo.sh  icon.svg.import  launch_local.sh  main.tscn  package-lock.json  project.godot  (+23 more)
backend/: .coverage  .env.example  .gitignore  Dockerfile.rl_agent  Dockerfile.rl_train  RL_FRAMEWORKS_INSTALLED.md  alembic.ini  cli.py  cyberwar.db  main.py  pyproject.toml  requirements-rl.txt  requirements.txt  run_tests.sh  test_gemini.py
backend/migrations/: env.py
backend/scripts/: reset_game_balance.py  run_v41_simulation.py  seed_v41_scenario.py
backend/src/: cyberwar.db
backend/tests/: conftest.py  test_api.py  test_auth_full.py  test_chat.py  test_cli_full.py  test_config.py  test_coverage.py  test_database.py  test_diplomacy_service.py  test_endpoints_full.py  test_endpoints_part2.py  test_engine.py  test_final_coverage.py  test_full_gameplay.py  test_full_gameplay_v2.py  test_functional.py  test_integration.py  test_lifespan.py  test_main.py  test_phantom_mesh.py  (+5 more)
(+225 files in other folders)
